# egazette_rag

./: .gitignore  README.md  app.py  app_new.py  app_new2.py  app_new3.py  app_new4.py  check_chromadb.py  check_db_folder.py  migrate.py  output.html  plan.txt  pyproject.toml  rag_hybrid_filter.py
static/: script.js  style.css
templates/: index.html  script.js  style.css
