[project]
name = "migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "chromadb>=1.1.1",
    "fastapi>=0.118.0",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "pgvector>=0.4.1",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
